@@ -17,13 +17,11 @@ class MigrationDoneViewController: UIViewController {
     }
 
     override func loadView() {
-        let centerContentView = MigrationDoneCenterView()
-        let centerView = MigrationCenterView(contentView: centerContentView,
-                                             configuration: viewModel.configuration.centerViewConfiguration)
-
-        view = MigrationStepView(headerView: MigrationHeaderView(configuration: viewModel.configuration.headerConfiguration),
-                                 actionsView: MigrationActionsView(configuration: viewModel.configuration.actionsConfiguration),
-                                 centerView: centerView)
+        self.view = MigrationStepView(
+            headerView: MigrationHeaderView(configuration: viewModel.configuration.headerConfiguration),
+            actionsView: MigrationActionsView(configuration: viewModel.configuration.actionsConfiguration),
+            centerView: MigrationCenterView.deleteWordPress(with: viewModel.configuration.centerViewConfiguration)
+        )
     }
 
     override func viewWillAppear(_ animated: Bool) {
