@@ -17,17 +17,14 @@ class MigrationStepView: UIView {
     private let centerView: UIView
     private let actionsView: MigrationActionsView
 
-    private lazy var centerContentView: UIView = {
-        let view = UIView()
-        view.addSubview(centerView)
-        return view
-    }()
-
     private lazy var mainStackView: UIStackView = {
-        let stackView = UIStackView(arrangedSubviews: [headerView, centerContentView])
+        let stackView = UIStackView(arrangedSubviews: [headerView, centerView, UIView()])
         stackView.axis = .vertical
-        stackView.spacing = Constants.stackViewSpacing
+        stackView.distribution = .equalSpacing
+        stackView.directionalLayoutMargins = Constants.mainStackViewMargins
         stackView.translatesAutoresizingMaskIntoConstraints = false
+        stackView.isLayoutMarginsRelativeArrangement = true
+        stackView.setCustomSpacing(Constants.stackViewSpacing, after: headerView)
         return stackView
     }()
 
@@ -45,17 +42,20 @@ class MigrationStepView: UIView {
         return scrollView
     }()
 
+    private lazy var minContentHeightConstraint: NSLayoutConstraint = {
+        return contentView.heightAnchor.constraint(greaterThanOrEqualToConstant: 0)
+    }()
+
     // MARK: - Init
 
     init(headerView: MigrationHeaderView,
          actionsView: MigrationActionsView,
          centerView: UIView) {
-
         self.headerView = headerView
         self.centerView = centerView
         centerView.translatesAutoresizingMaskIntoConstraints = false
         self.actionsView = actionsView
-        headerView.directionalLayoutMargins = Constants.headerViewMargins
+        headerView.directionalLayoutMargins = .zero
         actionsView.translatesAutoresizingMaskIntoConstraints = false
         super.init(frame: .zero)
         backgroundColor = MigrationAppearance.backgroundColor
@@ -65,8 +65,8 @@ class MigrationStepView: UIView {
     }
 
     private func activateConstraints() {
-        centerContentView.pinSubviewToAllEdges(centerView, insets: Constants.centerContentMargins)
         contentView.pinSubviewToAllEdges(mainStackView)
+        minContentHeightConstraint.isActive = true
 
         NSLayoutConstraint.activate([
             mainScrollView.topAnchor.constraint(equalTo: safeAreaLayoutGuide.topAnchor),
@@ -89,17 +89,43 @@ class MigrationStepView: UIView {
         fatalError("init(coder:) has not been implemented")
     }
 
+    // MARK: - Layout Subviews
+
     override func layoutSubviews() {
         super.layoutSubviews()
+        self.layoutMainScrollView()
+        self.layoutContentView()
+    }
+
+    private func layoutMainScrollView() {
         let bottomInset = actionsView.frame.size.height - safeAreaInsets.bottom
-        mainScrollView.contentInset = .init(
+        self.mainScrollView.contentInset = .init(
             top: additionalContentInset.top,
             left: additionalContentInset.left,
             bottom: bottomInset + additionalContentInset.bottom,
             right: additionalContentInset.right
         )
-        mainScrollView.verticalScrollIndicatorInsets.bottom = bottomInset
+        self.mainScrollView.verticalScrollIndicatorInsets.bottom = bottomInset
+        self.mainScrollView.setNeedsLayout()
+        self.mainScrollView.layoutIfNeeded()
     }
+
+    private func layoutContentView() {
+        self.minContentHeightConstraint.constant = 0
+        let contentViewHeight = contentView.systemLayoutSizeFitting(
+            .init(width: bounds.width, height: UIView.noIntrinsicMetric),
+            withHorizontalFittingPriority: .required,
+            verticalFittingPriority: .fittingSizeLevel
+        ).height
+        let scrollViewHeight = mainScrollView.frame.height
+        let scrollViewInsets = mainScrollView.adjustedContentInset
+        let visibleHeight = scrollViewHeight - (scrollViewInsets.top + scrollViewInsets.bottom)
+        if contentViewHeight < visibleHeight {
+            self.minContentHeightConstraint.constant = visibleHeight
+        }
+    }
+
+    // MARK: - Types
 
     private enum Constants {
         /// Adds space between the content bottom edge and actions sheet top edge.
@@ -111,8 +137,10 @@ class MigrationStepView: UIView {
         /// Adds top padding to the `scrollView`.
         static let topContentInset: CGFloat = UINavigationBar().intrinsicContentSize.height
 
-        static let centerContentMargins = UIEdgeInsets(top: 0, left: 30, bottom: 0, right: 30)
+        // Main stack view spacing.
         static let stackViewSpacing: CGFloat = 20
-        static let headerViewMargins = NSDirectionalEdgeInsets(top: 0, leading: 30, bottom: 0, trailing: 30)
+
+        // Adds margins to the main sack view.
+        static let mainStackViewMargins = NSDirectionalEdgeInsets(top: 0, leading: 30, bottom: 0, trailing: 30)
     }
 }
