@@ -34,15 +34,10 @@ final class MigrationDeleteWordPressViewController: UIViewController {
     // MARK: - View Lifecycle
 
     override func loadView() {
-        let centerContentView = MigrationDoneCenterView()
-        let centerView = MigrationCenterView(
-            contentView: centerContentView,
-            configuration: viewModel.content
-        )
         let migrationView = MigrationStepView(
             headerView: MigrationHeaderView(configuration: viewModel.header),
             actionsView: MigrationActionsView(configuration: viewModel.actions),
-            centerView: centerView
+            centerView: MigrationCenterView.deleteWordPress(with: viewModel.content)
         )
         migrationView.additionalContentInset.top = 0
         self.view = migrationView
