@@ -1,10 +1,11 @@
 21.6
 -----
 * [*] Fix a layout issue impacting the "No media matching your search" empty state message of the Media Picker screen.  [#19820]
-* [*] The Migration flow doesn't complete automatically if the user interrupts the migration mid flow. [#19888]
+* [*] [Jetpack-only] The Migration flow doesn't complete automatically if the user interrupts the migration mid flow. [#19888]
 * [***] [Jetpack-only] Stats Insights Update. Helps you understand how your content is performing and what’s resonating with your audience. [#19909]
 * [***] [internal] Delete all the activity logs after logging out. [#19930]
 * [*] [Jetpack-only] Fixed an issue where Stats Followers details did not update on Pull-to-refresh in the Stats Followers Details screen [#19935]
+* [*] [Jetpack-only] Tweak Migration Screens UI when fonts are enlarged. [#19944]
 
 21.5
 -----
